[gd_scene load_steps=5 format=3 uid="uid://tlof5wxfa42m"]

[ext_resource type="Script" uid="uid://cyj3gs41iaki6" path="res://to_do_tab.gd" id="1_l0ivd"]
[ext_resource type="PackedScene" uid="uid://cmu4jpxf562kr" path="res://to_do_row.tscn" id="1_okqnh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l0ivd"]
bg_color = Color(0.113429, 0.312392, 0.225213, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_okqnh"]

[node name="ToDoTab" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l0ivd")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="NewListButton" type="Button" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_l0ivd")
text = "New List"

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="ListsList" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TemplatesButton" type="Button" parent="HBoxContainer/VBoxContainer/ScrollContainer/ListsList"]
layout_mode = 2
text = "Placeholder
"

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer/ScrollContainer/ListsList"]
layout_mode = 2
text = "Placeholder"

[node name="RightSideScrollable" type="ScrollContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/RightSideScrollable"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NewCreator" type="HBoxContainer" parent="HBoxContainer/RightSideScrollable/VBoxContainer"]
layout_mode = 2

[node name="TodoName" type="LineEdit" parent="HBoxContainer/RightSideScrollable/VBoxContainer/NewCreator"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Dishes..."

[node name="SaveTodoButton" type="Button" parent="HBoxContainer/RightSideScrollable/VBoxContainer/NewCreator"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
theme_override_colors/font_color = Color(2.88785e-06, 0.88136, 0.952338, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_okqnh")
text = "Save"

[node name="TodosList" type="VBoxContainer" parent="HBoxContainer/RightSideScrollable/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ToDoRow" parent="HBoxContainer/RightSideScrollable/VBoxContainer/TodosList" instance=ExtResource("1_okqnh")]
layout_mode = 2

[node name="ToDoRow2" parent="HBoxContainer/RightSideScrollable/VBoxContainer/TodosList" instance=ExtResource("1_okqnh")]
layout_mode = 2
